# world

./: .gitignore  README.md
IPConv/: CMakeLists.txt  IPConv.cpp  build.sh
IPConv/include/: IPConv.h
IPConv/test/: CMakeLists.txt  test.cpp
docker/: base_images
docker/caffe2/: Dockerfile  build.sh
eval-speedup/classification/inference/: caffe_instance.h  classification.cpp  classification.h  queue.h
eval-speedup/classification/service/: main.go  main_queue.go
eval-speedup/classification/test/: run.sh  so2.sh  test.sh
eval-speedup/classification/tmp/: classification.cpp.bak1  classification.cpp.gpu  main.cpp  make.sh  make2.sh  so.sh
feature_test/: CMakeCache.txt  CMakeLists.txt  main.cpp
hadoop_spark_cluster/: Dockerfile  issues.fix  notes  run.sh  start-master.sh  start-slave1.sh  start-slave2.sh  start.READM
hadoop_spark_cluster/codes_and_data/: kafka_consumer_publisher.py  spark_1.py  spark_2.py  spark_3.py  spark_4.py  spark_5.py  spark_6.py  test_3.txt  testout.out  zookeeper.out
hadoop_spark_cluster/hadoop_deploy/: init_hadoop_start.sh  init_hbase.sh  init_kafka.sh  init_spark.sh  init_zookeeper_start.sh  kafka.server.properties  spark-env.sh  zoo.cfg
image_caption/: caption.py
mobile/ncnnapp/alexnet/: local.properties
mobile/ncnnapp/alexnet/app/: build.gradle
mobile/ncnnapp/alexnet/app/src/main/cpp/: CMakeLists.txt  inference.cpp  native-lib.cpp
mobile/ncnnapp/alexnet/app/src/main/cpp/headers/: inference.h  utils.h
mobile/ncnnapp/alexnet/app/src/main/cpp/jni/: com_example_alexnet_MainActivity.h
mobile/ncnnapp/alexnet/app/src/main/java/com/example/alexnet/: MainActivity.java
mobile/ncnnapp/alexnet/gradle/wrapper/: gradle-wrapper.properties
mobile/ncnnapp/alexnet2/: README.md  local.properties
mobile/ncnnapp/alexnet2/app/: build.gradle
mobile/ncnnapp/alexnet2/app/src/androidTest/java/com/example/alexnet/: ExampleInstrumentedTest.java
mobile/ncnnapp/alexnet2/app/src/main/assets/: imagenet1000_preprocessed_labels.txt
mobile/ncnnapp/alexnet2/app/src/main/cpp/: CMakeLists.txt  inference.cpp  native-lib.cpp  sort.cpp  utils.cpp
mobile/ncnnapp/alexnet2/app/src/main/cpp/classification/: CMakeLists.txt  inference.cpp  native-lib.cpp
mobile/ncnnapp/alexnet2/app/src/main/cpp/detection/: CMakeLists.txt  detection_lib.cpp  ffmpegaudio.cpp  ffmpegvideo.cpp
mobile/ncnnapp/alexnet2/app/src/main/cpp/detection_headers/: ffmpegaudio.h  ffmpegvideo.h
mobile/ncnnapp/alexnet2/app/src/main/cpp/headers/: inference.h  sort.h  utils.h
mobile/ncnnapp/alexnet2/app/src/main/cpp/insight/: base.h
mobile/ncnnapp/alexnet2/app/src/main/cpp/insightface/: CMakeLists.txt  face_jni.cpp  face_pro.cpp
mobile/ncnnapp/alexnet2/app/src/main/cpp/insightface/headers/: face_pro.h
mobile/ncnnapp/alexnet2/app/src/main/cpp/jni/: com_example_alexnet_face_process_FaceProcess.h  com_example_alexnet_ffmpeg_video_videoplayer.h  com_example_alexnet_netlib.h
mobile/ncnnapp/alexnet2/app/src/main/java/com/example/alexnet/: ClassifyFragment.java  MainActivity.java  netlib.java  videodet.java  videofdet.java
mobile/ncnnapp/alexnet2/app/src/main/java/com/example/alexnet/face/process/: FaceProcess.java
mobile/ncnnapp/alexnet2/app/src/main/java/com/example/alexnet/ffmpeg/video/: videoplayer.java
mobile/ncnnapp/alexnet2/app/src/main/java/com/example/alexnet/video/: IPlayerCallBack.java  PlayerView.java  VideoPlayer.java
mobile/ncnnapp/alexnet2/app/src/test/java/com/example/alexnet/: ExampleUnitTest.java
mobile/ncnnapp/alexnet2/gradle/wrapper/: gradle-wrapper.properties
mobile/ncnnapp/deeplearn/: README.md  gradle.properties
mobile/ncnnapp/deeplearn/app/: build.gradle
mobile/ncnnapp/deeplearn/app/src/androidTest/java/com/example/deepln/: ExampleInstrumentedTest.java
mobile/ncnnapp/deeplearn/app/src/main/cpp/: CMakeLists.txt
mobile/ncnnapp/deeplearn/app/src/main/cpp/camera/: CMakeLists.txt  camera.cpp  styletransferncnn_jni.cpp
mobile/ncnnapp/deeplearn/app/src/main/cpp/common/: log.h
mobile/ncnnapp/deeplearn/app/src/main/cpp/jni/: com_camera_styletransfer.h
mobile/ncnnapp/deeplearn/app/src/main/java/com/camera/: styletransfer.java  tcamera.java
mobile/ncnnapp/deeplearn/app/src/main/java/com/example/deepln/: MainActivity.java  cameraFragment.java
mobile/ncnnapp/deeplearn/app/src/test/java/com/example/deepln/: ExampleUnitTest.java
mobile/ncnnapp/deeplearn/gradle/wrapper/: gradle-wrapper.properties
opencv_tracker/: CMakeLists.txt
opencv_tracker/src/: CMakeLists.txt  main.cpp
scripts/: dqn.py  gan_pytorch.py  pytorch_classifier.py  pytorch_test.py  testing.py
scripts/baseNets/: rcnn.READMD  rcnn.py  rcnn_data.py
scripts/lmdb/: mnist.py  mnist_lmdb.py
tools/: cs_app_redeploy.sh  etcd_restore.py  recover.sh
video_tracker/: CMakeLists.txt
video_tracker/kcf/: CMakeLists.txt
video_tracker/src/: CMakeLists.txt  main.cpp
